polish the introduction letter

--- a/index.html
+++ b/index.html
@@ -11,35 +11,42 @@
     frontiers.  It takes courage to leave the comfort of the physics of your
     home universe and explore the uncharted worlds of exophysics.
 
-    Along with this letter, you will find a complimentary explorer hat, an
-    exophysics field manual, exochemistry cookbook, and a so-called "HTML file"
-    - a human-era magic spell that will serve as your entrance portal.
+    Along with this letter, you will find:
 
-    This file is self-contained, will run as-is on any modern 2020's web
-    browser with WebGL2 support, and contains the following parts:
+    - One complimentary explorer hat: 👒 (limited edition)
+    - One Exophysics Field Manual: https://exophysics.net/manual.html
+    - One Exochemistry Cookbook: https://exophysics.net/cookbook.html
 
-    1. The HTML scaffolding
+    And this so-called "HTML file", which is a human-era magic spell that will
+    serve as your entrance portal.  The file is self-contained, will run as-is
+    on any modern 2020's web browser with WebGL2 support, and contains 5 parts:
+
+    1. The HTML backbone
     2. The "parameters" object, for tweaking basic settings
     3. The WebGL2 vertex shader code that describes the laws of physics
-    4. The WebGL2 fragment shader code that specifies the color of each particle
+    4. The WebGL2 fragment shader code (ignore this part)
     5. The JavaScript code that takes care of the uninteresting plumbing
 
-    My personal advice is to start by tweaking the vertex shader, and get an
-    intuition for what it takes to maximize the beautiful emergent properties.
-
-    A few pointers:
+    A good place to start is the vertex shader, where you can tweak physical
+    constants and laws, and get an intuition for what it takes to maximize the
+    beautiful emergent properties of a universe.  Additional pointers:
 
     - Website: https://exophysics.net/
     - Code: https://github.com/exophysics/exophysics
     - WebGL2 Tutorial: https://webgl2fundamentals.org/
     - License: Public Domain
 
+    Divine intervention is possible through:
+
+    - Mouse click: Pull particles towards the mouse pointer
+    - Press ".": Step through the simulation, one frame at a time
+    - Space bar: Pause or resume simulation
+
     Finally, I am legally obliged to inform you of the one law of exophysics:
     YOU ARE REQUIRED TO TERMINATE A SIMULATION IMMEDIATELY UPON FINDING
     EVIDENCE OF THE EMERGENCE OF SENTIENT CREATURES CAPABLE OF SUFFERING.
 
-    Your guide,
-    Q.
+    With that, 愉快的旅行, buen viaje, счастливого пути, et un bon voyage!
     -->
     <body style="margin: 0; background: black;">
         <canvas id="canvas" style="display: block; height: 100vh; width: 100vw;"></canvas>
