--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
             #version 300 es
             precision lowp float;
             // constants
-            const int extraUniforms = 1;
-            const int particleLimit = min(gl_MaxVertexUniformVectors - extraUniforms, 256);
             const float PI = 3.1415926535897932384626433832795;
 
             // tweakable parameters
@@ -80,6 +78,9 @@
             const mat2 attractionRotationMatrix = mat2(
                 cos(attractionAngle), sin(attractionAngle),
                 -sin(attractionAngle), cos(attractionAngle));
+
+            // Don't change the following line. The JavaScript code below will fill in this value
+            const int particleLimit = 0;
 
             // data transfer variables
             uniform vec4 allStates[particleLimit];
@@ -274,7 +275,7 @@
                 param.paused = false;
 
                 initUI(gl, param);
-                const shaderInfo = initShaders(gl);
+                const shaderInfo = initShaders(gl, param.particleLimit);
                 const buffers = initBuffers(gl, shaderInfo, param);
                 drawScene(gl, shaderInfo, buffers, param);
             }
@@ -314,8 +315,9 @@
                 });
             }
 
-            function initShaders(gl) {
+            function initShaders(gl, particleLimit) {
                 const vertexSource = document.getElementById("vertex-shader").text
+                    .replace(/(particleLimit = )\d+;/, '$1' + particleLimit + ';');
                 const fragmentSource = `#version 300 es
                     precision lowp float; in vec4 color; out vec4 outColor;
                     void main() { outColor = color; }`  // Just output what was put in
