--- a/index.html
+++ b/index.html
@@ -222,22 +222,16 @@
                 // Movement towards the bottom
                 velocity.y -= floorGravity;
 
-                // Limit position
-                if (state.x < -1.0) {
-                    state.x = -1.0;
-                    velocity.x *= -bounceDampeningFactor;
-                }
-                else if (state.x > 1.0) {
-                    state.x = 1.0;
-                    velocity.x *= -bounceDampeningFactor;
-                }
-                if (state.y < -1.0) {
-                    state.y = -1.0;
-                    velocity.y *= -bounceDampeningFactor;
-                }
-                else if (state.y > 1.0) {
-                    state.y = 1.0;
-                    velocity.y *= -bounceDampeningFactor;
+                // Keep particles inside the universe
+                for (int dimension = 0; dimension < 2; dimension++) {
+                    if (state[dimension] < -1.0) {
+                        state[dimension] = -1.0;
+                        velocity[dimension] *= -bounceDampeningFactor;
+                    }
+                    else if (state[dimension] > 1.0) {
+                        state[dimension] = 1.0;
+                        velocity[dimension] *= -bounceDampeningFactor;
+                    }
                 }
 
                 // Limit velocity
