strange chains (pretty)

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             const float floorGravity = 0.0;
             const float particleGravity = 0.0;
             const float flavorAttraction = -0.05;
-            const float numFlavors = 3.0;
+            const float numFlavors = 2.0;
             const float bounceDampeningFactor = 0.99;
-            const float maxV = 0.010;
-            const float maxAccel = 0.01;
+            const float maxV = 0.01;
+            const float maxAccel = 0.05;
             const float pointerRadius = 0.30;
             const float pointerSlowFactor = 0.0;
             const float pointerPullFactor = 0.2;
@@ -101,9 +101,9 @@
             void main() {
                 state = oldState;
                 velocity = oldVelocity;
-                //randomSeed = random;  // randomize the seed to make each run unique, if desired
+                randomSeed = random;  // randomize the seed to make each run unique, if desired
 
-                float scale = 0.001;
+                float scale = 1.0;
 
                 gl_Position.xy = state.xy;
                 gl_Position.zw = vec2(0.0, 1.0);
@@ -117,6 +117,8 @@
                 color.a = 1.0;
                 if      (flavor == 0.0) { color.rgb = vec3(1.0, 0.0, 0.7); }
                 else if (flavor == 1.0) { color.rgb = vec3(0.0, 1.0, 1.0); }
+                else if (flavor == 2.0) { color.rgb = vec3(1.0, 0.0, 0.0); }
+                else if (flavor == 3.0) { color.rgb = vec3(0.0, 0.0, 1.0); }
                 else                    { color.rgb = vec3(1.0, 1.0, 0.0); }
 
                 // Has the user paused the simulation?
@@ -135,7 +137,7 @@
                 state.xy += oldVelocity.xy;
 
                 // Gain/loss of energy
-                //state.z += state.y * energyGain;
+                state.z += state.y * energyGain;
 
                 // Attraction of particles towards each other
                 if (particleGravity != 0.0) {
@@ -169,9 +171,9 @@
                         otherState = allStates[i];
                         otherFlavor = floor(otherState.w * numFlavors);
                         dist = (otherState.xy - state.xy) / scale;
-                        if (flavor == otherFlavor) {
-                            dist /= 25.0;
-                        }
+                        //if (flavor == otherFlavor) {
+                        //    dist /= 25.0;
+                        //}
                         dist = (attractionRotationMatrix * dist);
                         length_dist = length(dist);
                         if (length_dist < 0.000001) {
@@ -185,9 +187,9 @@
                                 * (flavor == otherFlavor ? repulsion : -1.0)
                                 / weight;
                         }
-                        if (length_dist < 0.04) {
-                            state.xy = (85.0 * state.xy + 15.0 * otherState.xy) / 100.0;
-                        }
+                        //if (length_dist < 0.01) {
+                            //state.xy = (85.0 * state.xy + 15.0 * otherState.xy) / 100.0;
+                        //}
                         accel += dist.xy
                             / pow(length_dist, 4.0)
                             * flavorAttraction
