--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
             // Physical Constants
             const float floorGravity = 0.0;
-            const float particleGravity = 0.0;
-            const float flavorAttraction = -0.5;
-            const float numFlavors = 2.0;
+            const float particleGravity = 0.3;
+            const float flavorAttraction = -0.05;
+            const float numFlavors = 5.0;
             const float bounceDampeningFactor = 0.99;
             const float maxV = 0.01;
             const float maxAccel = 0.05;
@@ -160,7 +160,7 @@
 
                 // Attraction between particles based on flavor
                 if (flavorAttraction != 0.0) {
-                    float repulsion = 1000.0 * pow(numFlavors - 1.0, 3.0);
+                    float repulsion = 100.0 * pow(numFlavors - 1.0, 2.0);
                     vec4 otherState;
                     float otherFlavor;
                     vec2 dist;
@@ -172,11 +172,11 @@
                         otherFlavor = floor(otherState.w * numFlavors);
                         dist = (otherState.xy - state.xy) / scale;
                         if (flavor == otherFlavor) {
-                            dist /= 15.0;
+                            dist /= 50000.0;
                         }
                         dist = (attractionRotationMatrix * dist);
                         length_dist = length(dist);
-                        if (length_dist < 0.000001) {
+                        if (length_dist < 0.00000001) {
                             continue;
                         }
                         if (length_dist < 0.10) {
