--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             const float flavorAttraction = -0.05;
             const float numFlavors = 3.0;
             const float bounceDampeningFactor = 0.99;
-            const float maxV = 0.001;
+            const float maxV = 0.01;
             const float maxAccel = 0.05;
             const float pointerRadius = 0.30;
             const float pointerSlowFactor = 0.0;
@@ -109,9 +109,10 @@
                 gl_Position.zw = vec2(0.0, 1.0);
                 gl_PointSize = 4.0;
 
+                // Derived attributes
                 float flavor = floor(state.w * numFlavors);
                 float weight = 1.0;
-                weight *= (flavor == 0.0 ? 0.04 : 1.0);
+                weight *= (flavor == 0.0 ? 0.0001 : 1.0);
                 //weight *= 1000.0 * length(velocity.xy) / maxV + 1.0;
 
                 color.a = 1.0;
@@ -173,7 +174,7 @@
                         otherFlavor = floor(otherState.w * numFlavors);
                         dist = (otherState.xy - state.xy) / scale;
                         //if (flavor == otherFlavor) {
-                            //dist /= 50000.0;
+                            //dist /= 25.0;
                         //}
                         dist = (attractionRotationMatrix * dist);
                         distLength = length(dist);
@@ -184,7 +185,7 @@
                             accel += dist
                                 / distLength
                                 * pow((distLength * 10.0), 2.0)
-                                * flavorAttraction * 100000000.0
+                                * flavorAttraction * 1000000.0
                                 * (flavor == otherFlavor ? repulsion : -1.0)
                                 / weight;
                         }
@@ -230,8 +231,8 @@
                 }
 
                 // Limit velocity
-                if (length(velocity.xy) > maxV / weight) {
-                    velocity.xy *= vec2(maxV / weight / length(velocity.xy));
+                if (length(velocity.xy) > maxV) {
+                    velocity.xy *= vec2(maxV / length(velocity.xy));
                 }
 
                 // Limit energy
