maxV dependent on flavor

--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
 
             // Physical Constants
             const float floorGravity = 0.0;
-            const float particleGravity = 0.001;
-            const float flavorAttraction = -0.05;
+            const float particleGravity = 0.0;
+            const float flavorAttraction = -0.1;
             const float numFlavors = 4.0;
             const float bounceDampeningFactor = 0.99;
-            const float maxV = 0.006;
             const float maxAccel = 0.01;
             const float pointerRadius = 0.30;
             const float pointerSlowFactor = 0.0;
@@ -79,7 +78,8 @@
                 -sin(attractionAngle), cos(attractionAngle));
 
             // Derived particle properties, based on flavor
-            const float weights[] = float[](0.0001, 1.0, 100000.0, 1.0);
+            const float maxVs[] = float[](0.01, 0.01, 0.006, 0.003);
+            const float weights[] = float[](0.0001, 1.0, 15000.0, 1.0);
             const vec3 colors[] = vec3[](
                 vec3(1.0, 0.0, 0.7),
                 vec3(0.0, 1.0, 1.0),
@@ -122,6 +122,7 @@
 
                 // Derived attributes
                 int flavor = int(floor(state.w * numFlavors));
+                float maxV = maxVs[flavor];
                 float weight = weights[flavor];
                 weight *= 10000.0 * length(velocity.xy) / maxV + 1.0;
                 color = vec4(colors[flavor], 1.0);
@@ -189,7 +190,7 @@
                             accel += dist
                                 / distLength
                                 * pow((distLength * 10.0), 2.0)
-                                * flavorAttraction * 100000.0
+                                * flavorAttraction * 1000000.0
                                 * (flavor == otherFlavor ? repulsion : -1.0)
                                 / weight;
                         }
