--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             // Derived particle properties, based on flavor
             const float maxVs[] = float[](0.01, 0.01, 0.006, 0.003);
-            const float weights[] = float[](0.0001, 1.0, 15000.0, 1.0);
+            const float weights[] = float[](0.0001, 1.0, 1000000.0, 1.0);
             const vec3 colors[] = vec3[](
                 vec3(1.0, 0.0, 0.7),
                 vec3(0.0, 1.0, 1.0),
@@ -178,8 +178,8 @@
                         otherState = allStates[i];
                         otherFlavor = int(floor(otherState.w * numFlavors));
                         dist = (otherState.xy - state.xy) / scale;
-                        if (flavor == otherFlavor) {
-                            dist /= 0.5;
+                        if (flavor != otherFlavor) {
+                            dist /= 2.0;
                         }
                         dist = (attractionRotationMatrix * dist);
                         distLength = length(dist);
